--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -118,6 +118,7 @@
         <activity android:name=".view.activity.webView.LollipopWebViewActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize"/>
         <activity android:name=".view.activity.ViewERC20Activity" />
+        <activity android:name=".view.activity.SendERC20TokenActivity" />
 
         <meta-data
             android:name="io.fabric.ApiKey"
